test/compile-fail/resolution/multiple-definition-mod-fn-struct/top.rhdl
mod b {}
fn b() {}
struct b {}
